style: added styles to bill, hide item overflow, fixed item font size, added hover effect to clear button

--- a/src/app/cart/cart.css
+++ b/src/app/cart/cart.css
@@ -82,3 +82,8 @@
   box-shadow: var(--box-shadow);
   cursor: pointer;
 }
+
+.clear-cart:hover {
+  background-color: var(--background-color-2);
+  color: var(--logo-red);
+}
