--- a/src/app/checkout/checkout.css
+++ b/src/app/checkout/checkout.css
@@ -70,8 +70,3 @@
     padding-left: 40px;
   }
 }
-
-.cart-main h2 {
-  font-size: 2rem;
-  font-weight: normal;
-}
