--- a/src/app/components/cart/cartitem.css
+++ b/src/app/components/cart/cartitem.css
@@ -7,6 +7,7 @@
   border-radius: var(--border-radius);
   background-color: white;
   box-shadow: var(--box-shadow);
+  overflow: hidden;
 }
 
 .cart-item-holder {
